--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,13 @@ header {
 /* MAIN */
 section {
   height: 100vh;
+  width: 100%; /* Ikke nødvendig */
+  border: 1px solid black;
 }
 
 .hero {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 20px;
@@ -39,6 +42,25 @@ section {
 
 .heroImg {
   width: 50%;
+  height: 50%;
+  border: 1px solid black;
+}
+
+.about {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.aboutText {
+  width: 50%;
+}
+
+.aboutImg {
+  width: 50%;
+  height: 50%;
   border: 1px solid black;
 }
 
@@ -72,4 +94,14 @@ section {
 footer {
   display: flex;
   justify-content: center;
+}
+
+@media (max-width: 426px) {
+  body {
+    background-color: red;
+  }
+
+  .hero {
+    flex-direction: column;
+  }
 }
